--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin: 0;
     box-sizing: border-box;
 }
-.root{
+:root{
     --background: #000430;
     --secondaryBackground:#171c48;
     --text: #fff;
@@ -21,4 +21,43 @@ body{
     align-items: center;
     justify-content: center;
     margin-top: 120px;
+    margin: 120px auto 0 auto;
+    max-width: 500px;
+}
+.stats-container{
+    padding: 20px;
+    border-radius: 10px;
+    border: 2px solid var(--purple);
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
+    width: 100%;
+}
+.details{
+    width: 100%;
+}
+#progressBar{
+    width: 100%;
+    height: 10px;
+    background-color: var(--secondaryBackground);
+    border-radius: 5px;
+    margin-top: 20px;
+}
+#progress{
+    width: 50%;
+    height: 10px;
+    background-color: var(--teal);
+    
+}
+#numbers{
+    width: 100px;
+    height: 100px;
+    background-color: var(--purple);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    font-size: 30px;
+    font-weight: bold;
+
 }
