--- a/style.css
+++ b/style.css
@@ -44,9 +44,11 @@ body{
     margin-top: 20px;
 }
 #progress{
-    width: 50%;
+    width: 80%;
     height: 10px;
     background-color: var(--teal);
+    border-radius: 10px;
+    transition: all 0.3s ease;
     
 }
 #numbers{
@@ -60,4 +62,33 @@ body{
     font-size: 30px;
     font-weight: bold;
 
+}
+form{
+    margin-top: 60px;
+    width:100%;
+    display: flex;
+    gap: 10px;
+}
+input{
+    flex: 1;
+    padding: 16px;
+    background-color: var(--secondaryBackground);
+    border: 1px solid var(--purple);
+    border-radius: 10px;
+    outline: none;
+    color: var(--text);
+
+}
+button{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--purple);
+    color: var(--text);
+    font-size: 30px;
+    font-weight: bold;
+    outline: none;
 }
