--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body{
     margin-top: 20px;
 }
 #progress{
-    width: 80%;
+    width: 0;
     height: 10px;
     background-color: var(--teal);
     border-radius: 10px;
@@ -91,4 +91,51 @@ button{
     font-size: 30px;
     font-weight: bold;
     outline: none;
+}
+#task-list{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 30px;
+    width: 100%;
+    list-style: none;
+}
+.taskltem{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    background-color: var(--secondaryBackground);
+    padding: 10px;
+    border-radius: 10px;
+    align-items: center;
+}
+.icons {
+    display: flex;
+    gap: 10px;
+}
+
+.icons img {
+    width: 24px;   
+    height: 24px;  
+    margin: 0 5px;
+    cursor: pointer;
+}
+.task{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.task input{
+    width: 20px;
+    height: 20px;
+}/* Fix the completed styles */
+.taskltem.completed .task p {
+    text-decoration: line-through;
+    color: var(--teal);
+    opacity: 0.7;
+}
+
+.taskltem.completed .task p {
+    text-decoration: line-through;
+    color: var(--teal);
 }
